--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "etiqa-freelance-ui",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --aot --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,28 +12,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/animations": "~10.2.0",
+    "@angular/cli": "~10.2.0",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "bootstrap": "^4.5.3",
-    "ng-zorro-antd": "^10.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "bootstrap": "^4.5.3",
     "codelyzer": "^6.0.0",
+    "express": "^4.17.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -40,9 +36,19 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-zorro-antd": "^10.0.2",
+    "path": "^0.12.7",
     "protractor": "~7.0.0",
+    "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.3",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "12.18.0",
+    "npm": "6.14.4"
   }
 }
